# drf-auth

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
appointments/: models.py  permissions.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
schedules_project/: asgi.py  settings.py  urls.py  wsgi.py
